# langchain_project

./: .env.example  .gitignore  README.md  pyproject.toml  stream_multiturn_v.py  streamlit_demo.py
.github/ISSUE_TEMPLATE/: trouble-shooting.md
img/: workflow_diagram.mmd
src/: main.py
src/agent/: tools.py
src/agents/: financial_analyst.py  quality_evaluator.py  report_generator.py  request_analyst.py  supervisor.py
src/agents/tools/: fianancial_tools.py  financial_tools.py  report_tools.py
src/core/: pipeline.py
src/data/: crawler.py  retriever.py
src/database/: chat_history.py
src/evaluate/: evaluator.py
src/model/: llm.py
src/rag/: retriever.py  vector_store.py
src/test/: financial_tools_test.py  test_chat_history.py  test_quality_evaluator.py  test_report_generation_scenario_1.py  test_report_generation_scenario_10.py  test_report_generation_scenario_2.py  test_report_generation_scenario_3.py  test_report_generation_scenario_4.py  test_report_generation_scenario_5.py  test_report_generation_scenario_6.py  test_report_generation_scenario_7.py  test_report_generation_scenario_8.py  test_report_generation_scenario_9.py  test_request_analyst.py  test_retriever.py  test_supervisor.py  test_tools_stock.py
src/utils/: config.py  logger.py
src/web/: app.py  stream_multiturn_v.py
src/workflow/: workflow.py
