[project]
name = "ai-agent-project"
version = "0.1.0"
description = "AI agent specialized in stock information and recommendations"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain-upstage",
    "yfinance",
    "streamlit",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "ruff",
]