[project]
name = "ai-agent-project"
version = "0.1.0"
description = "AI agent specialized in stock information and recommendations"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain-upstage",
    "yfinance",
    "streamlit",
    "python-dotenv",
    "langgraph>=1.0.1",
    "deep-translator>=1.11.4",
    "tavily>=1.0.0",
    "langchain-community>=0.3.31",

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest",
    "black",
    "ruff",
]
